refactored some class methods using decorators and added a function in basic electrical

--- a/PS-Code.ipynb
+++ b/PS-Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,44 +10,103 @@
     "import math\n",
     "\n",
     "\n",
-    "#code and test voltage controle class on 28/11/2020"
+    "def truncation(function):\n",
+    "\n",
+    "    def method(*args,accuracy=3):\n",
+    "\n",
+    "        ans = function(*args)\n",
+    "        \n",
+    "        ans = np.around(ans,accuracy)\n",
+    "\n",
+    "        return ans\n",
+    "\n",
+    "    return method\n",
+    "\n",
+    "\n",
+    "# code and test voltage controle class on 28/11/2020\n",
+    "\n",
+    "# discovered np.around could round both complex and flotting point numbers\n",
+    "\n",
+    "# added trucate decorator and try to add trucate_dict to set precisions for key value pair in dictonary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
     "class BasicElectrical:\n",
     "    \n",
-    "    def __init__(self,accuracy=3,freq=50):\n",
+    "    def __init__(self,accuracy=3\n",
+    "                 \n",
+    "                 ,freq=50):\n",
     "\n",
     "        self.accuracy = accuracy\n",
     "\n",
     "        self.freq = freq\n",
+    "        \n",
+    "        np.set_printoptions(precision=accuracy)\n",
     "    \n",
+    "    def setprecision(self,*args):\n",
+    "\n",
+    "        #A = map(lambda x:complex(round(x.real,self.accuracy),round(x.imag,self.accuracy)),args)\n",
+    "        \n",
+    "        A = map(lambda x:np.around(x,self.accuracy),args)\n",
+    "\n",
+    "        return list(A)\n",
+    "    \n",
+    "    @truncation\n",
     "    def power(self,V,I):\n",
     "\n",
     "        return V*(I.conjugate())\n",
     "    \n",
+    "    @truncation\n",
     "    def PhaseDiff(self,a,b):\n",
     "        \n",
-    "        alpha = math.atan(a.imag/a.real)\n",
+    "        alpha = np.arctan(a.imag/a.real)\n",
     "        \n",
-    "        beta = math.atan(b.imag/b.real)\n",
+    "        beta = np.arctan(b.imag/b.real)\n",
     "        \n",
-    "        return (alpha - beta)\n",
+    "        return ((alpha - beta)/np.pi)*180\n",
     "    \n",
-    "    def polar(self,r,theta,accuracy=3):\n",
+    "    @truncation\n",
+    "    def polar(self,r,theta):\n",
     "        \n",
     "        theta = theta*np.pi/180\n",
     "        \n",
-    "        x = round(r*np.cos(theta),accuracy)\n",
+    "        x = round(r*np.cos(theta),self.accuracy)\n",
     "        \n",
-    "        y = round(r*np.sin(theta),accuracy)\n",
+    "        y = round(r*np.sin(theta),self.accuracy)\n",
     "        \n",
     "        return complex(x,y)\n",
+    "    \n",
+    "    @truncation\n",
+    "    def rectangle(self,z):\n",
+    "        \n",
+    "        return f\"{round(abs(z),self.accuracy)} at an angle {round(np.arctan(z.imag/z.real)*180/np.pi,self.accuracy)}\"\n",
+    "    \n",
+    "    def propagation_constants(self,z,y,length):\n",
+    "        \n",
+    "        gama = np.sqrt(z*y)\n",
+    "        \n",
+    "        alpha = gama.real\n",
+    "        \n",
+    "        beta = gama.imag\n",
+    "        \n",
+    "        Zc = np.sqrt(z/y)\n",
+    "        \n",
+    "        params = {\n",
+    "            'gama':self.rectangle(gama),\n",
+    "            \n",
+    "            'alpha':np.around(alpha,self.accuracy),\n",
+    "            \n",
+    "            'beta':np.around(beta,self.accuracy),\n",
+    "            \n",
+    "            'SurgeImpedence':self.rectangle(Zc)\n",
+    "        }\n",
+    "        \n",
+    "        return params\n",
     "        \n",
     "    def ABCD_T(self,Z,Y):\n",
     "        \n",
@@ -95,12 +154,6 @@
     "        \n",
     "        return np.matmul(A*R)\n",
     "    \n",
-    "    def setprecision(self,*args):\n",
-    "    \n",
-    "        A = map(lambda x:complex(round(x.real,self.accuracy),round(x.imag,self.accuracy)),args)\n",
-    "\n",
-    "        return list(A)\n",
-    "    \n",
     "    def PhaseComponents(self,Va0,Va1,Va2):\n",
     "        \n",
     "        Lambda = self.polar(1,120)\n",
@@ -113,7 +166,7 @@
     "\n",
     "        V = [Va,Vb,Vc]\n",
     "\n",
-    "        V = map(lambda x:complex(round(x.real,3),round(x.imag,3)),V)\n",
+    "        V = map(lambda x:np.around(x,self.accuracy),V)\n",
     "\n",
     "        return V\n",
     "    \n",
@@ -129,14 +182,14 @@
     "\n",
     "        V = [Va0,Va1,Va2]\n",
     "\n",
-    "        V = map(lambda x:complex(round(x.real,3),round(x.imag,3)),V)\n",
+    "        V = map(lambda x:np.around(x,self.accuracy),V)\n",
     "\n",
     "        return list(V)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +198,9 @@
     "    def __init__(accuracy=3):\n",
     "\n",
     "        super().__init__(accuracy=accuracy)\n",
-    "\n",
+    "        \n",
+    "    \n",
+    "    @truncation\n",
     "    def SynchronousMachine(self,E,V,X,delta):\n",
     "        \n",
     "        delta = np.pi/180\n",
@@ -156,12 +211,14 @@
     "    \n",
     "        return complex(P,Q)\n",
     "    \n",
+    "    @truncation\n",
     "    def TapChaningTransformer(self,V1,V2,P,Q,R,X):\n",
     "        \n",
     "        ans = (V2/V1)*(1/(1-(R*P+X*Q)/(V1*V2)))\n",
     "        \n",
     "        return pow(ans,0.5)\n",
     "    \n",
+    "    @truncation\n",
     "    def CircleParams(self,Vs,Vr,A,B,flag=False):\n",
     "        \n",
     "        beta = np.arctan(B.Imag/B.real)/np.pi\n",
@@ -206,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,17 +560,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.99450685+1.56500000e-03j, 9.9450685 +3.50114202e+01j],\n",
-       "       [0.        +3.13000000e-04j, 0.99450685+1.56500000e-03j]])"
+       "array([[0.995+1.565e-03j, 9.945+3.501e+01j],\n",
+       "       [0.   +3.130e-04j, 0.995+1.565e-03j]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +600,7 @@
        "       [175.191-131.346j]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,17 +620,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[6406.53394757+4827.54404212j],\n",
-       "       [ 174.43420605 -130.32966481j]])"
+       "array([[6406.534+4827.544j],\n",
+       "       [ 174.434 -130.33j ]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,24 +641,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-22000j"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V = polar(220,0)\n",
+    "\n",
+    "I = polar(100,90)\n",
+    "\n",
+    "E.power(V,I)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 190,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-3.991"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = polar(1,56)\n",
+    "\n",
+    "B = polar(2,60)\n",
+    "\n",
+    "E.PhaseDiff(A,B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1j"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(complex(-1,0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'gama': '2.485 at an angle 75.473',\n",
+       " 'alpha': '0.623 at an angle 0.0',\n",
+       " 'beta': '2.406 at an angle 0.0',\n",
+       " 'SurgeImpedence': '0.414 at an angle -14.527'}"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = complex(0.5,0.9)\n",
+    "\n",
+    "y = complex(0,6)\n",
+    "\n",
+    "E.propagation_constants(z,y,200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2.33+4.56j)"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.around(complex(2.33333,4.55555),2)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.7 64-bit",
+   "display_name": "Python 3.6.3 32-bit",
    "language": "python",
-   "name": "python36764bit24da9d3e7fa74dc8be33d2383068f4bb"
+   "name": "python36332bita32b11c6f794474eba45a8820d646165"
   },
   "language_info": {
    "codemirror_mode": {
@@ -613,7 +771,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
