added several new function in basic electrical class like star to delta and string capacitors

--- a/PS-Code.ipynb
+++ b/PS-Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,9 +100,9 @@
     "        \n",
     "        theta = math.radians(theta)\n",
     "        \n",
-    "        x = round(r*np.cos(theta),self.accuracy)\n",
+    "        x = r*np.cos(theta)\n",
     "        \n",
-    "        y = round(r*np.sin(theta),self.accuracy)\n",
+    "        y = r*np.sin(theta)\n",
     "        \n",
     "        return complex(x,y)\n",
     "    \n",
@@ -153,7 +153,7 @@
     "    @truncation   \n",
     "    def propagation_constants(self,z,y,length):\n",
     "        \n",
-    "        assert length>500 \"long transmission line length should be grater than 500k\"\n",
+    "        assert length>500,\"long transmission line length should be grater than 500km\"\n",
     "        \n",
     "        gama = np.sqrt(z*y)\n",
     "        \n",
@@ -251,7 +251,7 @@
     "\n",
     "        return list(V)\n",
     "    \n",
-    "    def convert_star_to_delta(self,z1,z2,z3):\n",
+    "    def convert_delta_to_star(self,z1,z2,z3):\n",
     "        \n",
     "        za = (z1*z2)/(z1 + z2 + z3)\n",
     "        \n",
@@ -261,7 +261,7 @@
     "        \n",
     "        return za, zb, zc\n",
     "    \n",
-    "    def convert_delta_to_star(self,za,zb,zc):\n",
+    "    def convert_star_to_delta(self,za,zb,zc):\n",
     "        \n",
     "        z1 = (za + zb + (za*zb)/zc)\n",
     "        \n",
@@ -269,12 +269,82 @@
     "        \n",
     "        z3 = (za + zc + (za*zc)/zb)\n",
     "        \n",
-    "        return z1, z2, z3"
+    "        return z1, z2, z3\n",
+    "    \n",
+    "    def string_capacitors(self,number_capacitors,capacitance_ratio,voltage):\n",
+    "        \n",
+    "        M  = np.zeros((number_capacitors,number_capacitors))\n",
+    "        \n",
+    "        for i in range(number_capacitors-1):\n",
+    "            \n",
+    "            for j in range(number_capacitors-1):\n",
+    "                \n",
+    "                if i>=j:\n",
+    "                    \n",
+    "                    M[i,j] = 1/capacitance_ratio\n",
+    "        \n",
+    "        for i in range(number_capacitors-1):\n",
+    "            \n",
+    "            M[i,i] = (1+1/capacitance_ratio)\n",
+    "\n",
+    "            M[i,i+1] = -1\n",
+    "        \n",
+    "        M[number_capacitors-1,:] = 1 \n",
+    "            \n",
+    "        V = np.zeros((number_capacitors,1))\n",
+    "        \n",
+    "        V[number_capacitors-1,0] = voltage\n",
+    "        \n",
+    "        V = np.matmul(np.linalg.inv(M),V)\n",
+    "        \n",
+    "        string_efficiency = (voltage*100)/(number_capacitors*V[-1,0])\n",
+    "        \n",
+    "        return V, string_efficiency\n",
+    "    \n",
+    "    def bridge_impedence(self,z1,z2,z3,z4,z5):\n",
+    "        \n",
+    "        if z1*z3 == z2*z4:\n",
+    "            \n",
+    "            #it is a wheat stone bridge\n",
+    "            \n",
+    "            return ((z1+z2)*(z3+z4))/(z1+z2+z3+z4)\n",
+    "        \n",
+    "        else:\n",
+    "            \n",
+    "            za, zb, zc = self.convert_delta_to_star(z4,z1,z5)\n",
+    "            \n",
+    "            ze1 = zb + z2\n",
+    "            \n",
+    "            ze2 = zc + z3\n",
+    "            \n",
+    "            ze3 = (ze1*ze2)/(ze1+ze2)\n",
+    "            \n",
+    "            return ze3+za\n",
+    "        \n",
+    "    def verify_tellegens_theorm(self,active,passive):\n",
+    "        \n",
+    "        real_power_delivered = 0\n",
+    "        \n",
+    "        real_power_consumed = 0\n",
+    "        \n",
+    "        for key,value in active.items():\n",
+    "            \n",
+    "            V, I = value\n",
+    "            \n",
+    "            real_power_delivered += (V*(I.conjugate())).real\n",
+    "            \n",
+    "        for key,value in passive.items():\n",
+    "            \n",
+    "            V, I = value\n",
+    "            \n",
+    "            real_power_consumed += (V*(I.conjugate())).real\n",
+    "            \n",
+    "        return(real_power_delivered == real_power_consumed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +598,7 @@
        "['1.e+02 + j5.e+01', '5.464e+02 + j1.655e+02', '-1.464e+02 + j-6.547e+01']"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +630,7 @@
        " '3.056e+01 + j-4.265e+00']"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -596,14 +666,14 @@
        " 'Va1': '2.373e-01 + j0.e+00',\n",
        " 'Va2': '2.373e-01 + j0.e+00',\n",
        " 'Va': '7.119e-01 + j0.e+00',\n",
-       " 'Vb': '1.e-05 + j0.e+00',\n",
-       " 'Vc': '1.e-05 + j0.e+00',\n",
+       " 'Vb': '0.e+00 + j0.e+00',\n",
+       " 'Vc': '0.e+00 + j0.e+00',\n",
        " 'Ia': '0.e+00 + j0.e+00',\n",
        " 'Ib': '-3.229e+00 + j3.559e+00',\n",
        " 'Ic': '3.229e+00 + j3.559e+00'}"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,13 +691,12 @@
     "\n",
     "FaultData = faults.DoubleLineGroundFault()\n",
     "\n",
-    "\n",
     "BasicElectrical().scientific_notation(FaultData)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +708,7 @@
        " 'SurgeImpedence': '4.01e+02 + j-1.039e+02'}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,14 +720,14 @@
     "\n",
     "y = complex(0,np.float(6e-6))\n",
     "\n",
-    "A = E.propagation_constants(z,y,200)\n",
+    "A = E.propagation_constants(z,y,510)\n",
     "\n",
     "BasicElectrical().scientific_notation(A)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +736,7 @@
        "-29.054604"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +756,7 @@
        "(-1323.993052-243.001877j)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +786,7 @@
        "(25520000-6600000j)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,6 +798,86 @@
     "\n",
     "BasicElectrical().power(V,I)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "V, string_efficiency = BasicElectrical().string_capacitors(5, 5, 66)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 6.663],\n",
+       "       [ 7.995],\n",
+       "       [10.927],\n",
+       "       [16.044],\n",
+       "       [24.37 ]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54.16447944007"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string_efficiency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BasicElectrical().bridge_impedence(1,2,3,4,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
